--- a/push/res/layout/layout_professor.xml
+++ b/push/res/layout/layout_professor.xml
@@ -1,113 +1,109 @@
-<?xml version="1.0" encoding="utf-8"?><com.example.push.widget.SlideHolder xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<com.example.push.widget.SlideHolder xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/slideHolder"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".ProfessorActivity" >
 
     <LinearLayout
         android:layout_width="250dp"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:background="#F5F5F5"
         android:baselineAligned="false"
         android:orientation="vertical" >
 
         <ListView
             android:id="@+id/elv_list"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:groupIndicator="@null" />
     </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical"
-            android:weightSum="10" >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp" >
+
+            <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_weight="0"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="10dp" >
+                android:gravity="center_vertical"
+                android:stretchColumns="*" >
 
-                <TableLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:stretchColumns="*" >
+                <TableRow
+                    android:id="@+id/tableRow1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
 
-                    <TableRow
-                        android:id="@+id/tableRow1"
+                    <Button
+                        android:id="@+id/general_btn"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" >
-
-                        <Button
-                            android:id="@+id/general_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="일반 공지"
-                            android:textSize="12sp" />
-
-                        <Button
-                            android:id="@+id/cancel_a_class_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="휴강 공지"
-                            android:textSize="12sp" />
-
-                        <Button
-                            android:id="@+id/supplement_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="보강 공지"
-                            android:textSize="12sp" />
-
-                        <Button
-                            android:id="@+id/task_btn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="과제 공지"
-                            android:textSize="12sp" />
-                    </TableRow>
-                </TableLayout>
-				
-				</LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="0"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:padding="10dp" >
-
-                    <TextView
-                        android:id="@+id/notify"
-                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:text="Notify"
-                        android:textColor="#5D5D5D"
-                        android:textSize="30sp"
-                        android:textStyle="bold" />
+                        android:text="일반 공지"
+                        android:textSize="12sp" />
 
-                </LinearLayout>
+                    <Button
+                        android:id="@+id/cancel_a_class_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="휴강 공지"
+                        android:textSize="12sp" />
 
-                <FrameLayout
-                    android:id="@+id/ll_fragment"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="25dp"
-                    android:layout_weight="1" >
-                </FrameLayout>
-           
+                    <Button
+                        android:id="@+id/supplement_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="보강 공지"
+                        android:textSize="12sp" />
+
+                    <Button
+                        android:id="@+id/task_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="과제 공지"
+                        android:textSize="12sp" />
+                </TableRow>
+            </TableLayout>
         </LinearLayout>
 
- 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="10dp" >
+
+            <TextView
+                android:id="@+id/notify"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Notify"
+                android:textColor="#5D5D5D"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/ll_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="25dp"
+            android:layout_weight="1" >
+        </FrameLayout>
+        
+    </LinearLayout>
 
 </com.example.push.widget.SlideHolder>
