--- a/push/res/layout/layout_main.xml
+++ b/push/res/layout/layout_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/slideHolder"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".MainActivity" >
+    tools:context=".DBMainActivity" >
     
     
     <LinearLayout
