professor UI complet

--- a/push/res/layout/genenal_fragment.xml
+++ b/push/res/layout/genenal_fragment.xml
@@ -5,6 +5,43 @@
     android:gravity="center"
     android:orientation="vertical" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2" >
+
+        <TextView
+            android:id="@+id/inputTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title 입력 -> "
+            android:layout_weight="3" 
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/inputMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Message 입력 -> "
+             android:layout_weight="3" 
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send Message 선택"
+            android:layout_weight="3" 
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
@@ -96,6 +133,5 @@
                 android:text="Send Message"
                 android:textSize="15sp" />
         </LinearLayout>
-    
 
 </LinearLayout>
