--- a/push/res/layout/cancle_class_fragment.xml
+++ b/push/res/layout/cancle_class_fragment.xml
@@ -3,31 +3,75 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical" 
-    >
+    android:orientation="vertical" >
 
-        <!-- Activity Layout XML -->
-        <!-- @author croute -->
-        <!-- @since 2011.03.08 -->
+    <!-- Activity Layout XML -->
+    <!-- @author croute -->
+    <!-- @since 2011.03.08 -->
 
-  <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2" >
+
+        <TextView
+            android:id="@+id/inputDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text=""
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/inputTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text=""
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+        
+         <TextView
+            android:id="@+id/inputMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text=""
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:text="Send Message 선택"
+            android:textColor="#5D5D5D"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="7dp"
         android:orientation="horizontal" >
-
 
         <TextView
             android:id="@+id/gv_calendar_select_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center"
             android:text=""
             android:textColor="#dc143c"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -40,9 +84,8 @@
             android:id="@+id/gv_calendar_activity_b_last"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
             android:text="Pre"
-            android:textSize="10sp"/>
+            android:textSize="10sp" />
 
         <TextView
             android:id="@+id/gv_calendar_activity_tv_title"
@@ -54,49 +97,49 @@
             android:textColor="#000"
             android:textSize="20sp"
             android:textStyle="bold" />
-        
+
         <Button
             android:id="@+id/gv_calendar_activity_b_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text = "next"
-            android:textSize="10sp"/>
-
+            android:text="next"
+            android:textSize="10sp" />
     </LinearLayout>
-     
-    <GridView
-            android:id="@+id/gv_calendar_activity_gv_calendar_week"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"  
-            android:gravity="center"
-            android:numColumns="7"
-            android:stretchMode="columnWidth" />
-     
-     <GridView
-            android:id="@+id/gv_calendar_activity_gv_calendar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:listSelector="@drawable/grideview_selector"
-            android:numColumns="7"
-            android:stretchMode="columnWidth" />
-     
-     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="10dp"
-            android:weightSum="2" >
 
-            <Button
-                android:id="@+id/pushTrans"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:onClick="onClickButton"
-                android:text="Send Message"
-                android:textSize="15sp" />
-     </LinearLayout>
+    <GridView
+        android:id="@+id/gv_calendar_activity_gv_calendar_week"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:numColumns="7"
+        android:stretchMode="columnWidth" />
+
+    <GridView
+        android:id="@+id/gv_calendar_activity_gv_calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:listSelector="@drawable/grideview_selector"
+        android:numColumns="7"
+        android:stretchMode="columnWidth" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:weightSum="2" >
+
+        <Button
+            android:id="@+id/pushTrans"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClickButton"
+            android:text="Send Message"
+            android:textSize="15sp" />
+    </LinearLayout>
+
 </LinearLayout>
