--- a/push/res/layout/layout_main.xml
+++ b/push/res/layout/layout_main.xml
@@ -59,6 +59,8 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:textSize="15sp"
+                android:maxLength="20"
+				android:singleLine="true"
                 />
         </LinearLayout>
 
@@ -81,11 +83,13 @@
                 android:id="@+id/login_pwd"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:hint="Input the Password "
                 android:gravity="center"
+                android:hint="Input the Password "
+                android:maxLength="20"
                 android:maxLines="1"
-                android:textSize="15sp"
-                 />
+                android:singleLine="true"
+                android:textSize="15sp" />
+
         </LinearLayout>
 
         <Switch
