--- a/push/res/layout/calendar_fragment.xml
+++ b/push/res/layout/calendar_fragment.xml
@@ -78,10 +78,9 @@
 
         <Button
             android:id="@+id/gv_calendar_activity_b_last"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pre"
-            android:textSize="10sp" />
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            android:background="@drawable/arrowleft"/>
 
         <TextView
             android:id="@+id/gv_calendar_activity_tv_title"
@@ -96,10 +95,10 @@
 
         <Button
             android:id="@+id/gv_calendar_activity_b_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="next"
-            android:textSize="10sp" />
+            android:layout_width="40dp"
+            android:layout_height="20dp"
+            android:background="@drawable/arrowright"
+            />
     </LinearLayout>
 
     <GridView
