--- a/push/res/layout/layout_student.xml
+++ b/push/res/layout/layout_student.xml
@@ -7,18 +7,94 @@
     tools:context=".StudentActivity" >
     
       <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="fill_parent"
-            android:orientation="vertical"
-            android:baselineAligned="false"
-            android:background="#F5F5F5">
-        <ListView
-                android:id="@+id/elv_list"
-                android:layout_width="fill_parent"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:background="#ADD8E6"
+        android:baselineAligned="false"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="20dp" >
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:src="@drawable/icon" 
+                android:scaleType="fitXY"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/slide_aboutbtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+            
+            <ImageView
+                
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/info" />
+
+            <TextView
+                android:id="@+id/slide_about"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:groupIndicator="@null"
-                />
-        
+                android:text="About"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="15dp" 
+                android:padding="2dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/slide_settingbtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/setting" />
+
+            <TextView
+                android:id="@+id/slide_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Setting"
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:textSize="15dp" 
+                android:padding="2dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/slide_loginbtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <ImageView
+                
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/login" />
+            <TextView
+                android:id="@+id/slide_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:textSize="15dp" 
+                android:padding="2dp"/>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -37,14 +113,6 @@
                 android:layout_gravity="left"
                 android:paddingBottom="30dp"
                 android:src="@drawable/logo" />
-
-            <Button
-                android:id = "@+id/notice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:orientation="horizontal"
-                android:text="공지보기" />
    
 
             <Button
