--- a/push/res/layout/calendar_fragment.xml
+++ b/push/res/layout/calendar_fragment.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="2" >
+        android:layout_height="wrap_content" >
 
         <TextView
             android:id="@+id/inputDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:text=""
             android:textColor="#5D5D5D"
             android:textSize="12sp"
@@ -25,17 +22,16 @@
             android:id="@+id/inputTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:text=""
             android:textColor="#5D5D5D"
             android:textSize="12sp"
             android:textStyle="bold" />
-        
-         <TextView
+		<TextView
             android:id="@+id/inputMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:text=""
             android:textColor="#5D5D5D"
             android:textSize="12sp"
@@ -44,7 +40,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:text="Send Message 선택"
             android:textColor="#5D5D5D"
             android:textSize="12sp"
@@ -55,8 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="7dp"
+		android:padding="13dp"
         android:orientation="horizontal" >
 
         <TextView
@@ -74,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:padding="15dp"
         android:orientation="horizontal" >
 
         <Button
@@ -97,8 +93,7 @@
             android:id="@+id/gv_calendar_activity_b_next"
             android:layout_width="40dp"
             android:layout_height="20dp"
-            android:background="@drawable/arrowright"
-            />
+            android:background="@drawable/arrowright" />
     </LinearLayout>
 
     <GridView
@@ -118,20 +113,17 @@
         android:numColumns="7"
         android:stretchMode="columnWidth" />
 
-    <LinearLayout
+   <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="10dp"
-        android:weightSum="2" >
+        android:padding="13dp" >
 
         <Button
             android:id="@+id/pushTrans"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:onClick="onClickButton"
             android:text="Send Message"
             android:textSize="15sp" />
