--- a/push/res/layout/layout_professor.xml
+++ b/push/res/layout/layout_professor.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:background="#ADD8E6"
+        android:background="@color/slide_background"
         android:baselineAligned="false"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@drawable/button_style"
             android:orientation="vertical" >
             
             <ImageView
@@ -56,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@drawable/button_style"
             android:orientation="vertical" >
 
             
@@ -79,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@drawable/button_style"
             android:orientation="vertical" >
 
             <ImageView
@@ -120,35 +123,44 @@
                 <TableRow
                     android:id="@+id/tableRow1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="wrap_content" 
+                    >
 
                     <Button
                         android:id="@+id/general_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="일반 공지"
-                        android:textSize="12sp" />
+                        android:background="@drawable/button_style"
+                        android:layout_weight="1"
+                        android:text="일반"
+                        android:textSize="16sp" />
 
                     <Button
                         android:id="@+id/task_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="과제 공지"
-                        android:textSize="12sp" />
+                        android:background="@drawable/button_style"
+                        android:layout_weight="1"
+                        android:text="과제"
+                        android:textSize="16sp" />
 
                     <Button
                         android:id="@+id/cancel_a_class_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="휴강 공지"
-                        android:textSize="12sp" />
+                        android:background="@drawable/button_style"
+                        android:layout_weight="1"
+                        android:text="휴강"
+                        android:textSize="16sp" />
 
                     <Button
                         android:id="@+id/supplement_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="보강 공지"
-                        android:textSize="12sp" />
+                        android:background="@drawable/button_style"
+                        android:layout_weight="1"
+                        android:text="보강"
+                        android:textSize="16sp" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
