--- a/push/res/layout/layout_student.xml
+++ b/push/res/layout/layout_student.xml
@@ -9,7 +9,7 @@
       <LinearLayout
         android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:background="#ADD8E6"
+        android:background="@color/slide_background"
         android:baselineAligned="false"
         android:gravity="center_horizontal"
         android:orientation="vertical" >
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@drawable/button_style"
             android:orientation="vertical" >
             
             <ImageView
@@ -56,6 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@drawable/button_style"
             android:orientation="vertical" >
 
             
@@ -79,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:background="@drawable/button_style"
             android:orientation="vertical" >
 
             <ImageView
